BART: inference - embeddings for classification

--- a/BART/bart_huggingface_inference.ipynb
+++ b/BART/bart_huggingface_inference.ipynb
@@ -108,9 +108,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9711c6d0",
+   "metadata": {},
+   "source": [
+    "### Sentence classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ac32a701",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 768])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 2.6215,  2.1697,  1.2741,  ...,  1.8379, -0.1814, -0.4693],\n",
+       "        [ 2.8047,  2.2025,  1.4536,  ...,  1.9282, -0.2587, -0.5650],\n",
+       "        [ 2.9222,  2.7109,  1.7373,  ...,  1.4853,  0.0573, -0.2068]],\n",
+       "       device='cuda:0')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import BartTokenizer, BartModel\n",
+    "import torch\n",
+    "\n",
+    "tokenizer = BartTokenizer.from_pretrained(\"facebook/bart-base\")\n",
+    "model = BartModel.from_pretrained(\"facebook/bart-base\")\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)\n",
+    "\n",
+    "texts = [\n",
+    "    \"The new iPhone was released last week and it's amazing.\",\n",
+    "    \"The movie was boring and too long.\",\n",
+    "    \"The vaccine rollout has helped control the pandemic.\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "inputs = tokenizer(\n",
+    "    texts, return_tensors=\"pt\",\n",
+    "    padding=True, truncation=True\n",
+    ").to(device)\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "\n",
+    "# Get sentence embeddings from <s> token\n",
+    "sentence_embeddings = outputs.last_hidden_state[:, 0, :]\n",
+    "print(sentence_embeddings.shape)\n",
+    "\n",
+    "sentence_embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac32a701",
+   "id": "3da434cf",
    "metadata": {},
    "outputs": [],
    "source": []
