OWL-ViT: screenshot - training steps

--- a/OWL-ViT/owlvit_huggingface_inference.ipynb
+++ b/OWL-ViT/owlvit_huggingface_inference.ipynb
@@ -11,8 +11,15 @@
     "**Simple Open-Vocabulary Object Detection with Vision Transformers**\n",
     "\n",
     " * Paper: https://arxiv.org/abs/2205.06230\n",
-    "\n"
+    "\n",
+    "![OWL-ViT training](../assets/owlvit_training.jpg)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac274e78",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
