OWL-ViT: installation

--- a/OWL-ViT/owlvit_huggingface_inference.ipynb
+++ b/OWL-ViT/owlvit_huggingface_inference.ipynb
@@ -17,14 +17,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f75c48d1",
+   "metadata": {},
+   "source": [
+    "**Instalation**\n",
+    "\n",
+    "```bash\n",
+    "pip install torch torchvision\n",
+    "pip install -q git+https://github.com/huggingface/transformers.git\n",
+    "pip install matplotlib\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ac274e78",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "owlvit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
