OWL-ViT: load model

--- a/OWL-ViT/owlvit_huggingface_inference.ipynb
+++ b/OWL-ViT/owlvit_huggingface_inference.ipynb
@@ -30,9 +30,43 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ac274e78",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bed68ab",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/owlvit/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "from transformers import OwlViTProcessor, OwlViTForObjectDetection\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "processor = OwlViTProcessor.from_pretrained(\n",
+    "    \"google/owlvit-base-patch32\"\n",
+    ")\n",
+    "model = OwlViTForObjectDetection.from_pretrained(\n",
+    "    \"google/owlvit-base-patch32\"\n",
+    ")\n",
+    "\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47ad4af7",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -43,7 +77,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.13"
   }
  },
