--- a/OWL-ViT/owlvit_huggingface_inference.ipynb
+++ b/OWL-ViT/owlvit_huggingface_inference.ipynb
@@ -63,8 +63,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "47ad4af7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_ids: torch.Size([4, 16])\n",
+      "attention_mask: torch.Size([4, 16])\n",
+      "pixel_values: torch.Size([1, 3, 768, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "image_path = \"../samples/plants.jpg\"\n",
+    "text_queries = [\"a plant\", \"a flower\", \"a tree\", \"a vase\"]\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "# Process image and text inputs\n",
+    "inputs = processor(\n",
+    "    text=text_queries, images=image,\n",
+    "    return_tensors=\"pt\"\n",
+    ").to(device)\n",
+    "\n",
+    "# Print input names and shapes\n",
+    "for key, val in inputs.items():\n",
+    "    print(f\"{key}: {val.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "59ada998",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits: shape of torch.Size([1, 576, 4])\n",
+      "pred_boxes: shape of torch.Size([1, 576, 4])\n",
+      "text_embeds: shape of torch.Size([1, 4, 512])\n",
+      "image_embeds: shape of torch.Size([1, 24, 24, 768])\n",
+      "class_embeds: shape of torch.Size([1, 576, 512])\n",
+      "\n",
+      "Text model outputs\n",
+      "last_hidden_state: shape of torch.Size([4, 16, 512])\n",
+      "pooler_output: shape of torch.Size([4, 512])\n",
+      "\n",
+      "Vision model outputs\n",
+      "last_hidden_state: shape of torch.Size([1, 577, 768])\n",
+      "pooler_output: shape of torch.Size([1, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get predictions\n",
+    "with torch.no_grad():\n",
+    "  outputs = model(**inputs)\n",
+    "\n",
+    "for k, val in outputs.items():\n",
+    "    if k not in {\"text_model_output\", \"vision_model_output\"}:\n",
+    "        print(f\"{k}: shape of {val.shape}\")\n",
+    "\n",
+    "print(\"\\nText model outputs\")\n",
+    "for k, val in outputs.text_model_output.items():\n",
+    "    print(f\"{k}: shape of {val.shape}\")\n",
+    "\n",
+    "print(\"\\nVision model outputs\")\n",
+    "for k, val in outputs.vision_model_output.items():\n",
+    "    print(f\"{k}: shape of {val.shape}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "615e32de",
    "metadata": {},
    "outputs": [],
    "source": []
