OWL-ViT: description

--- a/OWL-ViT/owlvit_huggingface_inference.ipynb
+++ b/OWL-ViT/owlvit_huggingface_inference.ipynb
@@ -12,7 +12,13 @@
     "\n",
     " * Paper: https://arxiv.org/abs/2205.06230\n",
     "\n",
-    "![OWL-ViT training](../assets/owlvit_training.jpg)"
+    "![OWL-ViT training](../assets/owlvit_training.jpg)\n",
+    "\n",
+    "\n",
+    "\n",
+    "OWL-ViT is an open-vocabulary object detector that performs detection in a **class-agnostic** manner. \n",
+    " * Given an input image, it first identifies regions that may contain objects without assuming any predefined categories.\n",
+    " * Then, using a list of free-text queries, the model scores each region based on how likely it is to match each query.\n"
    ]
   },
   {
