OWL-ViT: post-process outputs

--- a/OWL-ViT/owlvit_huggingface_inference.ipynb
+++ b/OWL-ViT/owlvit_huggingface_inference.ipynb
@@ -32,12 +32,13 @@
     "pip install torch torchvision\n",
     "pip install -q git+https://github.com/huggingface/transformers.git\n",
     "pip install matplotlib\n",
+    "pip install supervision\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1bed68ab",
    "metadata": {},
    "outputs": [
@@ -45,14 +46,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pyml/anaconda3/envs/owlvit/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
      ]
     }
    ],
    "source": [
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import supervision as sv\n",
+    "\n",
     "import torch\n",
     "from transformers import OwlViTProcessor, OwlViTForObjectDetection\n",
     "\n",
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "47ad4af7",
    "metadata": {},
    "outputs": [
@@ -90,10 +93,12 @@
     "image_path = \"../samples/plants.jpg\"\n",
     "text_queries = [\"a plant\", \"a flower\", \"a tree\", \"a vase\"]\n",
     "image = Image.open(image_path).convert(\"RGB\")\n",
+    "w, h = image.size\n",
+    "image = image.resize((w // 4, h // 4))\n",
     "\n",
     "# Process image and text inputs\n",
     "inputs = processor(\n",
-    "    text=text_queries, images=image,\n",
+    "    text=[text_queries], images=image,\n",
     "    return_tensors=\"pt\"\n",
     ").to(device)\n",
     "\n",
@@ -104,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "59ada998",
    "metadata": {},
    "outputs": [
@@ -148,8 +153,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "615e32de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected a plant with confidence 0.107 at location [102.39, 22.71, 201.05, 270.97]\n",
+      "Detected a vase with confidence 0.155 at location [38.44, 157.63, 99.93, 267.99]\n",
+      "Detected a vase with confidence 0.172 at location [38.09, 158.26, 100.21, 267.0]\n",
+      "Detected a vase with confidence 0.238 at location [116.19, 127.45, 196.1, 271.34]\n",
+      "Detected a vase with confidence 0.178 at location [116.73, 124.51, 195.9, 270.6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# rescale boxes to image size\n",
+    "target_sizes = torch.tensor([(image.height, image.width)])\n",
+    "\n",
+    "# Convert bboxes to xyxy format\n",
+    "results = processor.post_process_grounded_object_detection(\n",
+    "    outputs=outputs, target_sizes=target_sizes,\n",
+    "    threshold=0.1, text_labels=[text_queries]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "boxes = results[0][\"boxes\"]\n",
+    "scores = results[0][\"scores\"]\n",
+    "text_labels = results[0][\"text_labels\"]\n",
+    "\n",
+    "for box, score, text_label in zip(boxes, scores, text_labels):\n",
+    "    box = [round(i, 2) for i in box.tolist()]\n",
+    "    print(\n",
+    "        f\"Detected {text_label} \"\n",
+    "        f\"with confidence {round(score.item(), 3)} \"\n",
+    "        f\"at location {box}\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c027add",
    "metadata": {},
    "outputs": [],
    "source": []
