--- a/OWLv2/owlv2_huggingface_inference.ipynb
+++ b/OWLv2/owlv2_huggingface_inference.ipynb
@@ -16,11 +16,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e835dab0",
+   "cell_type": "markdown",
+   "id": "21a63d10",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**Installation**\n",
+    "\n",
+    "```bash\n",
+    "pip install matplotlib\n",
+    "pip install supervision\n",
+    "pip install torch torchvision\n",
+    "pip install transformers\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99a4e118",
+   "metadata": {},
    "source": []
   }
  ],
