OWLv2: load model

--- a/OWLv2/owlv2_huggingface_inference.ipynb
+++ b/OWLv2/owlv2_huggingface_inference.ipynb
@@ -31,9 +31,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "99a4e118",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3c364d1e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import supervision as sv\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "from transformers import Owlv2Processor, Owlv2ForObjectDetection\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "processor = Owlv2Processor.from_pretrained(\n",
+    "    \"google/owlv2-base-patch16-ensemble\"\n",
+    ")\n",
+    "model = Owlv2ForObjectDetection.from_pretrained(\n",
+    "    \"google/owlv2-base-patch16-ensemble\"\n",
+    ")\n",
+    "\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "662a34eb",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
