GroundingDINO: minor changes

--- a/GroundingDINO/groundingdino_huggingface_inference.ipynb
+++ b/GroundingDINO/groundingdino_huggingface_inference.ipynb
@@ -24,7 +24,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from PIL import Image\n",
@@ -50,21 +58,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "FutureWarning: `box_threshold` is deprecated and will be removed in version 4.51.0 for `GroundingDinoProcessor.post_process_grounded_object_detection`. Use `threshold` instead.\n",
-      "FutureWarning: The key `labels` is will return integer ids in `GroundingDinoProcessor.post_process_grounded_object_detection` output since v4.51.0. Use `text_labels` instead to retrieve string object names.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "[{'scores': tensor([0.4790, 0.4350], device='cuda:0'),\n",
+       "  'labels': ['a vase', 'a plant'],\n",
        "  'boxes': tensor([[500.4077, 493.9652, 787.2032, 795.4719],\n",
-       "          [133.3739, 480.4415, 461.9477, 693.7854]], device='cuda:0'),\n",
-       "  'text_labels': ['a vase', 'a plant'],\n",
-       "  'labels': ['a vase', 'a plant']}]"
+       "          [133.3739, 480.4415, 461.9477, 693.7854]], device='cuda:0')}]"
       ]
      },
      "execution_count": 2,
@@ -195,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
