GLIP: docker image and altenrative installation

--- a/GLIP/glip_inference.ipynb
+++ b/GLIP/glip_inference.ipynb
@@ -19,6 +19,93 @@
    "cell_type": "markdown",
    "id": "451750e8",
    "metadata": {},
+   "source": [
+    "## Using Docker image\n",
+    "\n",
+    "```bash\n",
+    "# 1) Pull the GLIP docker image (CUDA 10.2 with PyTorch 1.9)\n",
+    "sudo docker pull pengchuanzhang/maskrcnn:ubuntu18-py3.7-cuda10.2-pytorch1.9\n",
+    "\n",
+    "# 2) Clone GLIP and create a directory for models on your host\n",
+    "git clone https://github.com/microsoft/GLIP.git GLIP_repo\n",
+    "cd GLIP_repo\n",
+    "mkdir MODEL\n",
+    "\n",
+    "# 3) Download the backbone weights (see section 2 below) into the MODEL folder\n",
+    "\n",
+    "# 4) Run the container and mount the repo\n",
+    "sudo docker run --gpus all -it --rm \\\n",
+    "  -v $(pwd):/workspace/GLIP_repo \\\n",
+    "  pengchuanzhang/maskrcnn:ubuntu18-py3.7-cuda10.2-pytorch1.9 bash\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3129683f",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "cd /workspace/GLIP_repo\n",
+    "# Install the Python dependencies\n",
+    "pip install einops shapely timm yacs tensorboardX ftfy prettytable pymongo\n",
+    "pip install transformers\n",
+    "# Build maskrcnn_benchmark\n",
+    "python setup.py build develop --user\n",
+    "\n",
+    "# Now you can run GLIP’s demo.  For example, to run the zero‑shot detector on an image:\n",
+    "python -m torch.distributed.launch --nproc_per_node=1 tools/test_grounding_net.py \\\n",
+    "  --config-file configs/pretrain/glip_Swin_T_O365_GoldG.yaml \\\n",
+    "  --weight MODEL/glip_tiny_model_o365_goldg.pth \\\n",
+    "  TEST.IMS_PER_BATCH 1 \\\n",
+    "  MODEL.DYHEAD.SCORE_AGG \"MEAN\" \\\n",
+    "  TEST.EVAL_TASK detection \\\n",
+    "  MODEL.DYHEAD.FUSE_CONFIG.MLM_LOSS False \\\n",
+    "  OUTPUT_DIR outputs/demo\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20411c42",
+   "metadata": {},
+   "source": [
+    " * Downloading the missing Swin weights\n",
+    "\n",
+    " ```bash\n",
+    " # Download Swin‑Tiny weights (ImageNet‑1K)\n",
+    "wget https://github.com/SwinTransformer/storage/releases/download/v1.0.0/swin_tiny_patch4_window7_224.pth -P MODEL\n",
+    "\n",
+    "# Download Swin‑Large weights (ImageNet‑22K, 384×384)\n",
+    "wget https://github.com/SwinTransformer/storage/releases/download/v1.0.0/swin_large_patch4_window12_384_22k.pth -P MODEL\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e88dec1a",
+   "metadata": {},
+   "source": [
+    "## Alternative: build outside Docker\n",
+    "\n",
+    "```bash\n",
+    "conda create -n glip python=3.7 -y\n",
+    "conda activate glip\n",
+    "conda install pytorch==1.9.0 torchvision==0.10.0 cudatoolkit=11.1 -c pytorch -c nvidia -y\n",
+    "pip install einops shapely timm yacs tensorboardX ftfy prettytable pymongo transformers\n",
+    "# Clone and build GLIP\n",
+    "git clone https://github.com/microsoft/GLIP.git\n",
+    "cd GLIP\n",
+    "python setup.py build develop\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baec2568",
+   "metadata": {},
    "source": []
   }
  ],
