GLIP: download glip_tiny model using huggingface_hub

--- a/GLIP/glip_inference.ipynb
+++ b/GLIP/glip_inference.ipynb
@@ -106,6 +106,34 @@
    "cell_type": "markdown",
    "id": "baec2568",
    "metadata": {},
+   "source": [
+    "## Download model\n",
+    "\n",
+    "```python\n",
+    "import os\n",
+    "from huggingface_hub import hf_hub_download\n",
+    "\n",
+    "os.makedirs(\"MODEL\", exist_ok=True)\n",
+    "\n",
+    "repo_id = \"GLIPModel/GLIP\"\n",
+    "filename = \"glip_tiny_model_o365.pth\"\n",
+    "\n",
+    "# Download\n",
+    "model_path = hf_hub_download(\n",
+    "    repo_id=repo_id,\n",
+    "    filename=filename,\n",
+    "    cache_dir=\"GLIP_repo/MODEL\",\n",
+    "    repo_type=\"model\"  # ensures downloading from model repo\n",
+    ")\n",
+    "print(f\"Downloaded {filename} → {model_path}\")\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aef9638",
+   "metadata": {},
    "source": []
   }
  ],
