SmolVLM: load model

--- a/SmolVLM/smolvlm_huggingface_inference.ipynb
+++ b/SmolVLM/smolvlm_huggingface_inference.ipynb
@@ -13,6 +13,42 @@
     "\n",
     "![SmolVLM / Idefics3 Architecture Overview](../assets/smolvlm_arch_overview.jpg)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "640f7f25",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "pip install torch torchvision\n",
+    "pip install transformers\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af70a00f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "from transformers.image_utils import load_image\n",
+    "from transformers import AutoProcessor, AutoModelForVision2Seq\n",
+    "import torch\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "processor = AutoProcessor.from_pretrained(\n",
+    "    \"HuggingFaceTB/SmolVLM-Instruct\")\n",
+    "model = AutoModelForVision2Seq.from_pretrained(\n",
+    "    \"HuggingFaceTB/SmolVLM-Instruct\",\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    "    #_attn_implementation=\"flash_attention_2\" if device == \"cuda\" else \"eager\"\n",
+    ")\n",
+    "\n",
+    "model.eval().to(device);"
+   ]
   }
  ],
  "metadata": {
