SmolVLM: processing the inputs

--- a/SmolVLM/smolvlm_huggingface_inference.ipynb
+++ b/SmolVLM/smolvlm_huggingface_inference.ipynb
@@ -33,7 +33,6 @@
    "outputs": [],
    "source": [
     "from PIL import Image\n",
-    "from transformers.image_utils import load_image\n",
     "from transformers import AutoProcessor, AutoModelForVision2Seq\n",
     "import torch\n",
     "\n",
@@ -49,6 +48,49 @@
     "\n",
     "model.eval().to(device);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "63fab17f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 1562]) torch.Size([1, 17, 3, 384, 384])\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path).convert(\"RGB\")\n",
+    "\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"image\"},\n",
+    "            {\"type\": \"text\", \"text\": \"Can you describe the image?\"}\n",
+    "        ]\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "# Prepare inputs\n",
+    "prompt = processor.apply_chat_template(messages, add_generation_prompt=True)\n",
+    "inputs = processor(text=prompt, images=[image], return_tensors=\"pt\")\n",
+    "inputs = inputs.to(device)\n",
+    "print(inputs[\"input_ids\"].shape, inputs[\"pixel_values\"].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "474f8842",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
