SmolVLM: inference and post-process

--- a/SmolVLM/smolvlm_huggingface_inference.ipynb
+++ b/SmolVLM/smolvlm_huggingface_inference.ipynb
@@ -86,8 +86,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "474f8842",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User:<image>Can you describe the image? Assistant: The image features two plants\n",
+      "in golden-colored pots, placed on a wooden floor against a white wall. The\n",
+      "plants are positioned in front of the wall, with the larger plant on the right\n",
+      "side of the image and the smaller plant on the left side. Both plants have green\n",
+      "leaves and appear to be healthy and well-maintained. The pots are cylindrical\n",
+      "and made of metal, with a golden finish that contrasts with the natural green of\n",
+      "the plants. The pots are placed on individual stands, which are also made of\n",
+      "metal and have a spiral design, allowing the plants to be placed at different\n",
+      "heights. The wooden floor is a light brown color, with a natural wood grain\n",
+      "pattern, and it appears to be well-maintained. The white wall in the background\n",
+      "provides a neutral backdrop for the plants and pots, making them the focal point\n",
+      "of the image. The lighting in the image is soft and natural, with no harsh\n",
+      "shadows, which helps to highlight the plants and their surroundings.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate outputs\n",
+    "generated_ids = model.generate(**inputs, max_new_tokens=500)\n",
+    "generated_texts = processor.batch_decode(\n",
+    "    generated_ids,\n",
+    "    skip_special_tokens=True,\n",
+    ")\n",
+    "\n",
+    "response = generated_texts[0]\n",
+    "\n",
+    "import textwrap\n",
+    "print(textwrap.fill(response, width=80))  # Format the response for better readability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd345ae",
    "metadata": {},
    "outputs": [],
    "source": []
