Janus: architecture screenshot

--- a/Janus/janus_huggingface_inference.ipynb
+++ b/Janus/janus_huggingface_inference.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "**Janus: Decoupling Visual Encoding for Unified Multimodal Understanding and Generation**\n",
     "\n",
-    " * Paper: https://arxiv.org/abs/2410.13848"
+    " * Paper: https://arxiv.org/abs/2410.13848\n",
+    "\n",
+    "![Janus Architecture](../assets/janus_arch.jpg)"
    ]
   },
   {
