Janus: training screenshot

--- a/Janus/janus_huggingface_inference.ipynb
+++ b/Janus/janus_huggingface_inference.ipynb
@@ -19,6 +19,14 @@
    "cell_type": "markdown",
    "id": "ddfb6990",
    "metadata": {},
+   "source": [
+    "![Janus Training Stages](../assets/janus_training_stages.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e6ec8bb",
+   "metadata": {},
    "source": []
   }
  ],
