--- a/Janus/janus_huggingface_inference.ipynb
+++ b/Janus/janus_huggingface_inference.ipynb
@@ -27,6 +27,18 @@
    "cell_type": "markdown",
    "id": "3e6ec8bb",
    "metadata": {},
+   "source": [
+    " * Installation\n",
+    "```bash\n",
+    "pip install torch torchvision\n",
+    "pip install transformers\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2802ea36",
+   "metadata": {},
    "source": []
   }
  ],
