--- a/Janus/janus_huggingface_inference.ipynb
+++ b/Janus/janus_huggingface_inference.ipynb
@@ -37,24 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "05f5f783",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pyml/anaconda3/envs/janus/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from PIL import Image  \n",
-    "import torch  \n",
+    "from PIL import Image\n",
+    "import torch\n",
+    "import textwrap\n",
     "  \n",
-    "from transformers import JanusForConditionalGeneration, JanusProcessor  \n",
+    "from transformers import (\n",
+    "    JanusForConditionalGeneration,\n",
+    "    JanusProcessor\n",
+    ")\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
    ]
@@ -81,8 +76,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "385604c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are a helpful language and vision assistant. You are able to understand the\n",
+      "visual content that the user provides, and assist the user with a variety of\n",
+      "tasks using natural language.  :  What do you see in this image?  :In this\n",
+      "image, I see two decorative flower pots. One pot is taller and has a large plant\n",
+      "in it, while the other pot is shorter and has a smaller plant. Both pots are\n",
+      "placed on\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "# Prepare Input for generation.\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            #{'type':'image', 'url': 'http://images.cocodataset.org/val2017/000000039769.jpg'},\n",
+    "            {'type':'image', 'image': image_path},\n",
+    "            {'type':\"text\", \"text\": \"What do you see in this image?\"}\n",
+    "        ]\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "inputs = processor.apply_chat_template(\n",
+    "    messages,\n",
+    "    add_generation_prompt=True,\n",
+    "    generation_mode=\"text\",\n",
+    "    tokenize=True,\n",
+    "    return_dict=True,\n",
+    "    return_tensors=\"pt\",\n",
+    ").to(model.device, dtype=torch.bfloat16)\n",
+    "\n",
+    "output = model.generate(**inputs, max_new_tokens=40,generation_mode='text',do_sample=True)\n",
+    "text = processor.decode(output[0], skip_special_tokens=True)\n",
+    "print(textwrap.fill(text, 80))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3a2066c",
    "metadata": {},
    "outputs": [],
    "source": []
