--- a/InternVL/internvl_huggingface_inference.ipynb
+++ b/InternVL/internvl_huggingface_inference.ipynb
@@ -18,6 +18,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "00a4125f",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "git clone https://github.com/OpenGVLab/InternVL.git InternVL_repo\n",
+    "\n",
+    "conda create -n internvl python=3.9 -y\n",
+    "conda activate internvl\n",
+    "\n",
+    "cd InternVL_repo\n",
+    "pip install -r requirements.txt\n",
+    "pip install -r requirements/clip_benchmark.txt\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "64d4ae8b",
