InternVL: load model

--- a/InternVL/internvl_huggingface_inference.ipynb
+++ b/InternVL/internvl_huggingface_inference.ipynb
@@ -40,7 +40,27 @@
    "id": "64d4ae8b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModel\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model_name = \"OpenGVLab/InternVL3-1B\"\n",
+    "\n",
+    "model = AutoModel.from_pretrained(\n",
+    "    model_name,\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    "    load_in_8bit=False,\n",
+    "    low_cpu_mem_usage=True,\n",
+    "    use_flash_attn=True,\n",
+    "    trust_remote_code=True,\n",
+    "    device_map=device\n",
+    ").eval()\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    model_name, trust_remote_code=True, use_fast=False\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
