--- a/InternVL/internvl_huggingface_inference.ipynb
+++ b/InternVL/internvl_huggingface_inference.ipynb
@@ -36,13 +36,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "64d4ae8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/internvl/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/home/pyml/anaconda3/envs/internvl/lib/python3.9/site-packages/huggingface_hub/file_download.py:945: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FlashAttention2 is not installed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/internvl/lib/python3.9/site-packages/huggingface_hub/file_download.py:945: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    }
+   ],
    "source": [
+    "from PIL import Image\n",
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModel\n",
+    "import torchvision.transforms as T\n",
+    "from torchvision.transforms.functional import InterpolationMode\n",
+    "\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model_name = \"OpenGVLab/InternVL3-1B\"\n",
@@ -59,8 +90,118 @@
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(\n",
     "    model_name, trust_remote_code=True, use_fast=False\n",
-    ")\n"
+    ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "784e56a6",
+   "metadata": {},
+   "source": [
+    "### Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a6881318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IMAGENET_MEAN = (0.485, 0.456, 0.406)\n",
+    "IMAGENET_STD = (0.229, 0.224, 0.225)\n",
+    "\n",
+    "\n",
+    "def build_transform(input_size):\n",
+    "    MEAN, STD = IMAGENET_MEAN, IMAGENET_STD\n",
+    "    transform = T.Compose([\n",
+    "        T.Lambda(lambda img: img.convert('RGB') if img.mode != 'RGB' else img),\n",
+    "        T.Resize((input_size, input_size), interpolation=InterpolationMode.BICUBIC),\n",
+    "        T.ToTensor(),\n",
+    "        T.Normalize(mean=MEAN, std=STD)\n",
+    "    ])\n",
+    "    return transform\n",
+    "\n",
+    "\n",
+    "def find_closest_aspect_ratio(aspect_ratio, target_ratios, width, height, image_size):\n",
+    "    best_ratio_diff = float('inf')\n",
+    "    best_ratio = (1, 1)\n",
+    "    area = width * height\n",
+    "    for ratio in target_ratios:\n",
+    "        target_aspect_ratio = ratio[0] / ratio[1]\n",
+    "        ratio_diff = abs(aspect_ratio - target_aspect_ratio)\n",
+    "        if ratio_diff < best_ratio_diff:\n",
+    "            best_ratio_diff = ratio_diff\n",
+    "            best_ratio = ratio\n",
+    "        elif ratio_diff == best_ratio_diff:\n",
+    "            if area > 0.5 * image_size * image_size * ratio[0] * ratio[1]:\n",
+    "                best_ratio = ratio\n",
+    "    return best_ratio\n",
+    "\n",
+    "\n",
+    "def dynamic_preprocess(image, min_num=1, max_num=12, image_size=448, use_thumbnail=False):\n",
+    "    orig_width, orig_height = image.size\n",
+    "    aspect_ratio = orig_width / orig_height\n",
+    "\n",
+    "    # calculate the existing image aspect ratio\n",
+    "    target_ratios = set(\n",
+    "        (i, j) for n in range(min_num, max_num + 1) for i in range(1, n + 1) for j in range(1, n + 1) if\n",
+    "        i * j <= max_num and i * j >= min_num)\n",
+    "    target_ratios = sorted(target_ratios, key=lambda x: x[0] * x[1])\n",
+    "\n",
+    "    # find the closest aspect ratio to the target\n",
+    "    target_aspect_ratio = find_closest_aspect_ratio(\n",
+    "        aspect_ratio, target_ratios, orig_width, orig_height, image_size)\n",
+    "\n",
+    "    # calculate the target width and height\n",
+    "    target_width = image_size * target_aspect_ratio[0]\n",
+    "    target_height = image_size * target_aspect_ratio[1]\n",
+    "    blocks = target_aspect_ratio[0] * target_aspect_ratio[1]\n",
+    "\n",
+    "    # resize the image\n",
+    "    resized_img = image.resize((target_width, target_height))\n",
+    "    processed_images = []\n",
+    "    for i in range(blocks):\n",
+    "        box = (\n",
+    "            (i % (target_width // image_size)) * image_size,\n",
+    "            (i // (target_width // image_size)) * image_size,\n",
+    "            ((i % (target_width // image_size)) + 1) * image_size,\n",
+    "            ((i // (target_width // image_size)) + 1) * image_size\n",
+    "        )\n",
+    "        # split the image\n",
+    "        split_img = resized_img.crop(box)\n",
+    "        processed_images.append(split_img)\n",
+    "    assert len(processed_images) == blocks\n",
+    "    if use_thumbnail and len(processed_images) != 1:\n",
+    "        thumbnail_img = image.resize((image_size, image_size))\n",
+    "        processed_images.append(thumbnail_img)\n",
+    "    return processed_images\n",
+    "\n",
+    "\n",
+    "def load_image(image_file, input_size=448, max_num=12):\n",
+    "    image = Image.open(image_file).convert('RGB')\n",
+    "    transform = build_transform(input_size=input_size)\n",
+    "    images = dynamic_preprocess(image, image_size=input_size, use_thumbnail=True, max_num=max_num)\n",
+    "    pixel_values = [transform(image) for image in images]\n",
+    "    pixel_values = torch.stack(pixel_values)\n",
+    "    return pixel_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1246b70",
+   "metadata": {},
+   "source": [
+    "### Single-image inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17b4347f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -70,7 +211,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.23"
   }
  },
