--- a/InternVL/internvl_huggingface_inference.ipynb
+++ b/InternVL/internvl_huggingface_inference.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "64d4ae8b",
    "metadata": {},
    "outputs": [
@@ -69,6 +69,7 @@
    ],
    "source": [
     "from PIL import Image\n",
+    "import textwrap\n",
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModel\n",
     "import torchvision.transforms as T\n",
@@ -199,6 +200,51 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17b4347f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:151645 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:151645 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User: <image> Please describe the image shortly. Assistant: The image features\n",
+      "two potted plants, one placed on a black pot with a blue rim and the other in a\n",
+      "shiny gold container. Both plants are set against a wooden floor against a plain\n",
+      "wall.\n",
+      "User: <image> How many leaves the large plant on the right vase has? Assistant:\n",
+      "The large plant on the right vase has 8-10 leaves.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set the max number of tiles in `max_num`\n",
+    "pixel_values = load_image(\n",
+    "    '../samples/plants.jpg', max_num=12\n",
+    ").to(torch.bfloat16).to(device)\n",
+    "generation_config = dict(max_new_tokens=1024, do_sample=True)\n",
+    "\n",
+    "# single-image single-round conversation\n",
+    "question = '<image>\\nPlease describe the image shortly.'\n",
+    "response = model.chat(tokenizer, pixel_values, question, generation_config)\n",
+    "print(textwrap.fill(f'User: {question}\\nAssistant: {response}', 80))\n",
+    "\n",
+    "# single-image multi-round conversation\n",
+    "question = '<image>\\nHow many leaves the large plant on the right vase has?'\n",
+    "response, history = model.chat(tokenizer, pixel_values, question, generation_config, history=None, return_history=True)\n",
+    "print(textwrap.fill(f'User: {question}\\nAssistant: {response}', 80))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81ceeea8",
    "metadata": {},
    "outputs": [],
    "source": []
