InternVL: inference (multi-image)

--- a/InternVL/internvl_huggingface_inference.ipynb
+++ b/InternVL/internvl_huggingface_inference.ipynb
@@ -242,9 +242,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1aae90e",
+   "metadata": {},
+   "source": [
+    "### Multi-image inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "81ceeea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:151645 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User: <image> Describe the two images in detail. Assistant: In the first image:\n",
+      "1. The image showcases a white plate with two types of fruits and vegetables on\n",
+      "it.  2. There are several blueberries, round and dark-colored, neatly placed in\n",
+      "a cluster on the left side of the plate. 3. Two cucumbers, green in color, lie\n",
+      "on the right side of the plate. They appear fresh with a shiny texture. 4. A few\n",
+      "raspberries are scattered around the blueberries and cucumbers, adding red hues\n",
+      "and textures to the vibrant display. 5. Additionally, one whole avocado is\n",
+      "sliced on top of the plate, revealing its creamy yellow flesh.  In the second\n",
+      "image:  1. The image focuses on a plastic food processor placed on a marble\n",
+      "countertop.  2. The processor is partially filled with sliced red strawberries;\n",
+      "the majority of them have partially peeled skins off.  3. A halved avocado is\n",
+      "now resting in the processor, with its shell intact and the light dressing fully\n",
+      "transferred to the flesh.  These images show simple, fresh fruits and vegetables\n",
+      "arranged on a countertop, highlighting the variety and colors commonly found in\n",
+      "a healthy meal.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# multi-image multi-round conversation, combined images\n",
+    "pixel_values1 = load_image(\n",
+    "    \"../samples/fruits-01.jpg\", max_num=12\n",
+    ").to(torch.bfloat16).to(device)\n",
+    "pixel_values2 = load_image(\n",
+    "    \"../samples/fruits-02.jpg\", max_num=12\n",
+    ").to(torch.bfloat16).to(device)\n",
+    "pixel_values = torch.cat((pixel_values1, pixel_values2), dim=0)\n",
+    "\n",
+    "question = '<image>\\nDescribe the two images in detail.'\n",
+    "response, history = model.chat(\n",
+    "    tokenizer, pixel_values, question, generation_config,\n",
+    "    history=None, return_history=True\n",
+    ")\n",
+    "print(textwrap.fill(f'User: {question}\\nAssistant: {response}', 80))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81ceeea8",
+   "id": "9dd1bd51",
    "metadata": {},
    "outputs": [],
    "source": []
