SmolVLM: updated the paper and intro

--- a/SmolVLM/smolvlm_huggingface_inference.ipynb
+++ b/SmolVLM/smolvlm_huggingface_inference.ipynb
@@ -7,9 +7,11 @@
    "source": [
     "SmolVLM\n",
     "=====\n",
+    "**SmolVLM: Redefining small and efficient multimodal models**\n",
     "\n",
     " * Article: https://huggingface.co/blog/smolvlm\n",
-    " * Paper: https://arxiv.org/pdf/2408.12637\n",
+    " * Paper: (SmolVLM) https://arxiv.org/pdf/2504.05299v1\n",
+    " * Paper: (Idefics3) https://arxiv.org/pdf/2408.12637\n",
     "\n",
     "![SmolVLM / Idefics3 Architecture Overview](../assets/smolvlm_arch_overview.jpg)"
    ]
