LLaVA-NeXT: load model

--- a/LLaVA-NeXT/llavanext_huggingface_inference.ipynb
+++ b/LLaVA-NeXT/llavanext_huggingface_inference.ipynb
@@ -35,6 +35,40 @@
    "execution_count": null,
    "id": "9213ebf8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/llava/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Using a slow image processor as `use_fast` is unset and a slow processor was saved with this model. `use_fast=True` will be the default behavior in v4.52, even if the model was saved with a slow processor. This will result in minor differences in outputs. You'll still be able to use a slow processor with `use_fast=False`.\n",
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:00<00:00, 64.09it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import LlavaNextProcessor, LlavaNextForConditionalGeneration\n",
+    "import torch\n",
+    "from PIL import Image\n",
+    "import requests\n",
+    "\n",
+    "processor = LlavaNextProcessor.from_pretrained(\n",
+    "    \"llava-hf/llava-v1.6-mistral-7b-hf\"\n",
+    ")\n",
+    "\n",
+    "model = LlavaNextForConditionalGeneration.from_pretrained(\n",
+    "    \"llava-hf/llava-v1.6-mistral-7b-hf\",\n",
+    "    torch_dtype=torch.float16\n",
+    ")\n",
+    "model.eval().to(\"cuda:0\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23eedd8d",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
