LLaVA-NeXT: inference

--- a/LLaVA-NeXT/llavanext_huggingface_inference.ipynb
+++ b/LLaVA-NeXT/llavanext_huggingface_inference.ipynb
@@ -48,10 +48,10 @@
     }
    ],
    "source": [
-    "from transformers import LlavaNextProcessor, LlavaNextForConditionalGeneration\n",
-    "import torch\n",
     "from PIL import Image\n",
-    "import requests\n",
+    "import torch\n",
+    "from transformers import LlavaNextProcessor, LlavaNextForConditionalGeneration\n",
+    "import textwrap\n",
     "\n",
     "processor = LlavaNextProcessor.from_pretrained(\n",
     "    \"llava-hf/llava-v1.6-mistral-7b-hf\"\n",
@@ -66,8 +66,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "23eedd8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INST]   What is shown in this image? [/INST] The image shows two potted plants\n",
+      "placed on a wooden floor against a white wall. The plant on the left is in a\n",
+      "black pot and appears to be a type of succulent with long, trailing leaves. The\n",
+      "plant on the right is in a gold-colored pot and has large, glossy leaves that\n",
+      "resemble those of a banana plant. Both plants are placed on stands with a\n",
+      "geometric design, which adds a modern touch to the display.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import textwrap\n",
+    "\n",
+    "image_path = \"../samples/plants.jpg\"\n",
+    "image = Image.open(image_path)\n",
+    "\n",
+    "conversation = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\"type\": \"image\"},\n",
+    "            {\"type\": \"text\", \"text\": \"What is shown in this image?\"},\n",
+    "        ],\n",
+    "    },\n",
+    "]\n",
+    "prompt = processor.apply_chat_template(conversation, add_generation_prompt=True)\n",
+    "inputs = processor(image, prompt, return_tensors=\"pt\").to(\"cuda:0\")\n",
+    "\n",
+    "# autoregressively complete prompt\n",
+    "output = model.generate(**inputs, max_new_tokens=100)\n",
+    "\n",
+    "output_text = processor.decode(output[0], skip_special_tokens=True)\n",
+    "print(textwrap.fill(output_text, width=80))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36a2bfb2",
    "metadata": {},
    "outputs": [],
    "source": []
