--- a/DINOv3/dinov3_inference.ipynb
+++ b/DINOv3/dinov3_inference.ipynb
@@ -15,6 +15,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bbe169a6",
+   "metadata": {},
+   "source": [
+    "* Installation\n",
+    "\n",
+    "```bash\n",
+    "git clone https://github.com/facebookresearch/dinov3.git dinov3_repo\n",
+    "cd dinov3_repo\n",
+    "\n",
+    "conda env create -f conda.yaml\n",
+    "conda activate dinov3\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "abe5090b",
    "metadata": {},
    "source": []
