DINOv3: request to get the trained weights

--- a/DINOv3/dinov3_inference.ipynb
+++ b/DINOv3/dinov3_inference.ipynb
@@ -33,6 +33,16 @@
    "cell_type": "markdown",
    "id": "abe5090b",
    "metadata": {},
+   "source": [
+    " * Request to download the weights\n",
+    "\n",
+    "![DINOv3 Request](dinov3_request.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d8a13c1",
+   "metadata": {},
    "source": []
   }
  ],
