DINOv3: load model

--- a/DINOv3/dinov3_inference.ipynb
+++ b/DINOv3/dinov3_inference.ipynb
@@ -40,9 +40,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "5d8a13c1",
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "827ee03b",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torchvision.transforms as transforms\n",
+    "from PIL import Image\n",
+    "\n",
+    "# Set path where the repository was cloned\n",
+    "REPO_DIR = \"dinov3_repo\"\n",
+    "\n",
+    "# Load a ConvNeXt‑Base backbone pre‑trained on web images (LVD‑1689M)\n",
+    "model = torch.hub.load(\n",
+    "    REPO_DIR,\n",
+    "    'dinov3_convnext_base',\n",
+    "    source='local',\n",
+    "    weights='models/dinov3_convnext_base_pretrain_lvd1689m-801f2ba9.pth'\n",
+    ")\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.eval().to(device);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b50155f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -53,7 +81,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.13"
   }
  },
